[gd_scene load_steps=4 format=3 uid="uid://cf5cmnwig2y7m"]

[ext_resource type="Script" path="res://scenes/ui/win.gd" id="1_qq0jy"]
[ext_resource type="PackedScene" uid="uid://ck7erckqy66nt" path="res://scenes/ui/component/title_label.tscn" id="2_jj8pa"]
[ext_resource type="PackedScene" uid="uid://cmrmlavbbk6e1" path="res://scenes/ui/component/goto_button.tscn" id="3_nn8tw"]

[node name="Win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qq0jy")
ui_type = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TitleLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_jj8pa")]
layout_mode = 2
text = "You Made It!"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ButtonPlayAgain" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="ButtonPlayAgainNormal" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Again on Normal"

[node name="ButtonPlayAgainHard" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Again and Achieve Greatness"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="GotoButtonMenu" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_nn8tw")]
layout_mode = 2
text = "Main Menu"
goto_ui_id = &"menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonPlayAgain" to="." method="_on_button_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonPlayAgainNormal" to="." method="_on_button_play_again_normal_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonPlayAgainHard" to="." method="_on_button_play_again_hard_pressed"]
